--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,9 @@
-body{
+.body{
     font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    font-family: 'Arial', 'Helvetica Neue', 'Helvetica', 'sans-serif';
+    background-color: #dddddd;
+    /* width: 960px; */
+    }
 }
 h1{
     background-color: white;
@@ -7,14 +11,25 @@ h1{
     position:absolute;
 }
 
+.margin_top{
+    position:relative;
+    /* width: 960px; */
+    font-size: 18px;
+    /* set up border of both side */
+    /* margin-left:20%;
+    margin-right:20%; */
+    background-color: white;
+}
 .margin{
     position:relative;
-    width: 960px;
+    /* width: 960px; */
     font-size: 18px;
-    margin-left:20%;
-    margin-right:20%;
-    /* height: 80px; */
+    /* set up border of both side */
+    margin-left:5%;
+    margin-right:5%;
+    background-color: white;
 }
+
 
 a.active{
     position:relative;
@@ -23,8 +38,10 @@ a.active{
     display: block;
     text-align: center;
     padding: 30px;
-    margin-right:73%;
-    margin-top:0 auto;
+    margin-left:300px;
+    margin-right:63%;
+    margin-bottom: -8px;
+    margin-top: -10px;
 }
 .button_group{
     position: relative;
@@ -35,5 +52,47 @@ a.active{
     padding: 20px;
     /* stack three buttons from right to left using float right */
     float:right;
-    margin-top:-70px;
+    margin-right:300px;
+    margin-top:-65px;
+}
+
+.background{
+    position:relative;
+    background-color: white;
+    margin-left: 300px;
+    width:960px;
+    height:550px;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+}
+.about{
+    color: #4aaaa5;
+    padding: 25px;
+    margin-left: 0px;
+    text-align: left;
+    font-family:'Georgia', Times, Times New Roman, serif
+}
+.inner_line{
+    margin-top:-20px;
+}
+.footer{
+    background-color:#4aaaa5;
+    margin-top: 45px;
+    font-size: 18px;
+    text-align: center;
+    padding: 10px;
+}
+.photo{
+    width:150px;
+    height:225px;
+    float: left;
+    /* margin-left:20px; */
+}
+.first_p{
+float: right;
+width: 680px;
+font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+}
+.second_p{
+    float:left;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
