--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,6 @@
     background-color: #dddddd;
     /* width: 960px; */
     }
-}
 h1{
     background-color: white;
     font-family: 'Georgia', Times, Times New Roman, serif;
@@ -107,4 +106,35 @@ font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     height:40px;
     /* stack three buttons from right to left using float right */
     float:left;
-  }
+}
+.rocket{
+    width:200px;
+    height:225px;
+    float: left;
+}
+.dish{
+    width:200px;
+    height:225px;
+    float: left;
+    margin-left:20px;   
+}
+.rocket_position{
+    position: fixed;
+    top: 380px;
+    left: 365px;
+    width:12%;
+    height:5%;
+    text-align: center;
+    background: #4aaaa5;
+    color: white;
+} 
+.dish_position{
+    position: fixed;
+    top: 380px;
+    left: 585px;
+    width:12%;
+    height:5%;
+    text-align: center;
+    background: #4aaaa5;
+    color: white;
+}
