--- a/assets/css/style_v1.css
+++ b/assets/css/style_v1.css
@@ -2,6 +2,7 @@
     font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     font-family: 'Arial', 'Helvetica Neue', 'Helvetica', 'sans-serif';
     background-color: #dddddd;
+    /* width: 960px; */
     }
 h1{
     background-color: white;
@@ -11,18 +12,16 @@ h1{
 
 .margin_top{
     position:relative;
+    /* width: 960px; */
     font-size: 18px;
+    /* set up border of both side */
+    /* margin-left:20%;
+    margin-right:20%; */
     background-color: white;
 }
-.margin_top_sec{
-    position:relative;
-    width:960px;
-    left:300px;
-    height:80px;
-}
-
 .margin{
     position:relative;
+    /* width: 960px; */
     font-size: 18px;
     /* set up border of both side */
     margin-left:5%;
@@ -31,61 +30,32 @@ h1{
 }
 
 
-.active{
-    height:50px;
-    width:200px;
+a.active{
     position:relative;
-    float:left;
     background-color:#4aaaa5;
     color: white;
     display: block;
     text-align: center;
-    padding: 30px 10px 0px 10px;
-} 
-
-
-
-/* .not using button group now
-    button_group{
+    padding: 30px;
+    margin-left:300px;
+    margin-right:63%;
+    margin-bottom: -8px;
+    margin-top: -10px;
+}
+/* here I create button group with the idea from w3school
+   https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_button_group */
+.button_group{
     position: relative;
     background-color: white;
     border: right;
     color: gray;
     /* padding smaller than name */
-    /* padding: 20px; */
+    padding: 20px;
     /* stack three buttons from right to left using float right */
-    /* float:right; */
-    /* margin-right:300px; */
-    /* margin-to/p:-65px; */
-/* }  */
-.position_adjust{
-    padding: 30px;
-}
-#contact{
-    position: relative;
     float:right;
-    background-color:white;
-    color:gray;
-    width:100px;
-    text-align: center;
-}
-#portfolio{
-    position: relative;
-    float:right;
-    background-color:white;
-    color:gray;
-    border-right: dotted;
-    width:100px;
-    text-align: center;
-}
-#about{
-    position: relative;
-    float:right;
-    background-color:white;
-    color:gray;
-    border-right:dotted;
-    width:100px;
-    text-align: center;
+    margin-right:300px;
+    margin-top:-65px;
+
 }
 
 .background{
@@ -117,6 +87,7 @@ h1{
     width:150px;
     height:225px;
     float: left;
+    /* margin-left:20px; */
 }
 .first_p{
 float: right;
@@ -131,8 +102,10 @@ font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     background-color:#4aaaa5;
     border: 1px;
     color: white;
+    /* padding: 20px; */
     width:100px;
     height:40px;
+    /* stack three buttons from right to left using float right */
     float:left;
 }
 .rocket{
